# vertex-debspar-ai-v3

./: .gitignore  CLEANUP_REPORT.md  DEPENDENCY_LOG.md  DEPLOYMENT_GUIDE.md  DOCKER_BUILD_VALIDATION.md  Dockerfile.backend  Dockerfile.frontend  FINAL_DEPLOYMENT_REPORT.md  LICENSE_COMMERCIAL  LICENSE_GPLv3  PROJECT_SUMMARY.md  README.md  STEP2_EVALUATION.md  pyproject.toml  test_step3_backend_smoke.py  test_step4_frontend_integration.py
backend/src/debate_vertex/: main.py
backend/src/debate_vertex/core/: thermal.py
backend/src/debate_vertex/models/: brain_router.py
backend/src/debate_vertex/orchestrator/: cue_extractors.py  deb8.py  state.py
demo/: INTERACTIVE_DEMO.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DebateInterface.tsx  MessageStream.tsx  RebuttalTimer.tsx
hf-space/: DEPLOYMENT_INSTRUCTIONS.md  README.md  app.py
k3s/: deployment-hot.yaml  deployment-warm-llm.yaml  keda-scaledobject-llm.yaml  namespace.yaml
