[tool.poetry]
name = "debate-vertex"
version = "0.1.0"
description = "Hybrid Vertex Debate System"
authors = ["Vertex Architect"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
httpx = "^0.26.0"
websockets = "^12.0"
sentence-transformers = "^2.5.0"
torch = "^2.2.0"
numpy = "^1.26.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"